fixnutí - content overflowing, about - přidání contentu

--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,25 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box; /* most important... somehow fixes horizontal scrollbars*/
 }
 body {
-    /* min-height: 100vh; */
-    /* background-image: url(images\Placeholder.png);
-    background-size: cover;
-    background-position: center; */
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     overflow-x: hidden; /* Hide horizontal overflow */
     background-image: "images\Placeholder.png";
+
 }
 nav {
     position: relative; /* Position the nav element */
 }
 
 nav ul {
-    padding: vh 5vh; /* Add padding to the top of the ul element */
-    position: absolute; /* Position the ul element */
+    margin-top: 3vh;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    background-color: transparent; /* Set the background to transparent */
+    background-color: transparent;
     list-style: none;
     display: flex;
     justify-content: center;
@@ -31,13 +29,11 @@ nav ul {
 
 nav li {
     height: 50px;
+    padding: 0 30px; /* Add padding on both sides */
+    margin: 0; /* Remove any margin */
 }
-
 nav a {
     height: 100%;
-    padding:0 30px;
-    margin-top: 10%;
-    margin-left: 10%;
     text-decoration: none;
     display: flex;
     align-items: center;
@@ -51,15 +47,18 @@ nav a:hover {
 nav li:first-child {
     margin-right: auto;
 }
+
 nav img {
 width: 100%;
+height: auto;
 }
 .overlay {
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+    
 }
 
 .grid-item {
@@ -99,8 +98,60 @@ footer {
     padding-left: 2vh;
     padding-right: 2vh;
 }
+.video-container {
+    margin-top: 5vh;
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio (9 / 16 * 100) */
+    overflow: hidden;
+}
 
-/*  */
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.document{
+    padding: 5vh;
+    text-align: center;
+    font-weight: bold;
+    font-size: 20px;
+
+}
+.FAQ{
+    text-align: center;
+    border: 5px solid black;
+    width: 100%;
+}
+.question {
+    background-color: rgb(128, 191, 240);
+    padding: 5%;
+    cursor: pointer;
+    border-top: 2px solid black;
+    text-align: center;
+    font-weight: bold;
+}
+.answer {
+    display: none;
+    background-color: lightcoral;
+    padding: 5%;
+    border-top: 2px solid black;
+    text-align: center;
+}
+/* Responsive Design */
+@media (max-width: 768px) {
+    .video-container {
+        padding-bottom:  56.25%; /* udržení aspect-ratia*/
+    }
+}
+@media (max-width: 768px) {
+    ul img {
+      width: auto; 
+      max-width: 100%; /* Prevent images from overflowing their container(toto taky fixuje border box) */
+    }
+  }
 @media screen and (max-width: 768px){
     .grid-container{
         display: grid;
